--- a/src/Components/Users/UsersForm/UsersForm.module.css
+++ b/src/Components/Users/UsersForm/UsersForm.module.css
@@ -1,8 +1,8 @@
 .form-control {
-    border: 2px solid rgb(68, 67, 67);
+  border: 2px solid rgb(68, 67, 67);
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  padding :5rem
+  padding: 5rem;
 }
