--- a/src/Components/UI/Card.module.css
+++ b/src/Components/UI/Card.module.css
@@ -3,3 +3,9 @@
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
   border-radius: 10px;
 }
+
+.card li {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
